--- a/src/static/css/App.scss
+++ b/src/static/css/App.scss
@@ -1,6 +1,10 @@
 @import '~antd/dist/antd.css';
+@import 'reset.css';
+@import 'normalize.css';
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
   .test {
     color: red;
   }
