--- a/src/components/swiper/index.module.scss
+++ b/src/components/swiper/index.module.scss
@@ -1,6 +1,7 @@
 .swiper {
-    margin-top: 20px;
-    .swiperItem {
-        height: 400px;
-    }
+	width: 100%;
+
+	.swiperItem {
+		height: 400px;
+	}
 }
