--- a/src/view/home/index.module.scss
+++ b/src/view/home/index.module.scss
@@ -1,21 +1,38 @@
 .home {
-    width: 100%;
-    height: 100%;
-    .layout {
-        width: 100%;
-        height: 100%;
-        .header {
-            padding: 0 300px;
-            background: #fff;
-            height: 50px;
-            line-height: 50px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
-        }
-        .content {
-            padding: 0 300px;
-        }
-        .footer {
+	@import 'assets/css/common/index.scss';
+	width: 100%;
+	height: 100%;
 
-        }
-    }
+	.layout {
+		width: 100%;
+		height: 100%;
+
+		.header {
+			padding: 0 300px;
+			background: #fff;
+			height: 50px;
+			line-height: 50px;
+			box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
+		}
+
+		.content {
+			@include flex-column-levelCenter;
+
+			.shopContainer {
+				margin: 20px 0;
+				height: calc(100% - 40px - 20px - 20px - 20px - 2px);
+				padding: 0 300px;
+				width: 100%;
+				overflow: auto;
+			}
+		}
+
+		.footer {
+			padding: 0 300px;
+			background: #fff;
+			height: 50px;
+			line-height: 50px;
+			box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
+		}
+	}
 }
