--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 @import '~antd/dist/antd.css';
-@import 'static/css/reset.css';
-@import 'static/css/normalize.css';
+@import 'assets/css/common/reset.css';
+@import 'assets/css/common/normalize.css';
 
 .App {
   text-align: center;
