--- a/src/components/shopList/index.module.scss
+++ b/src/components/shopList/index.module.scss
@@ -1,15 +1,25 @@
 .list {
-  @import 'assets/css/common/index.scss';
+	@import 'assets/css/common/index.scss';
 	@include flex-row-levelSpt;
 	height: calc(100% - 40px - 20px - 20px - 400px - 50px);
 	margin-top: 20px;
+
 	>.item {
 		border-radius: 10px;
 		width: 300px;
 		height: 170px;
 		margin-bottom: 20px;
+		:global {
+			.ant-image {
+				.ant-image-mask {
+					display: none;
+				}
+			}
+		}
 		.imgContainer {
 			border-radius: 10px;
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+			cursor: pointer;
 		}
 	}
 }
