--- a/src/components/swiper/index.module.scss
+++ b/src/components/swiper/index.module.scss
@@ -3,5 +3,14 @@
 
 	.swiperItem {
 		height: 400px;
+		border-radius: 50px;
+		cursor: pointer;
+		:global {
+			.ant-image {
+				.ant-image-mask {
+					display: none;
+				}
+			}
+		}
 	}
 }
