feat: 增加搜索功能

--- a/src/components/shopList/index.module.scss
+++ b/src/components/shopList/index.module.scss
@@ -1,6 +1,6 @@
 .list {
 	@import 'assets/css/common/index.scss';
-	@include flex-row-levelSpt;
+	@include flex-row-levelSpa;
 	margin-top: 20px;
 	>.item {
 		border-radius: 10px;
