--- a/src/view/home/view/index/index.module.scss
+++ b/src/view/home/view/index/index.module.scss
@@ -3,8 +3,8 @@
   @include flex-column-levelCenter;
   height: 100%;
   .shopContainer {
-    margin: 20px 0;
-    height: calc(100% - 40px - 20px - 20px - 20px - 2px);
+    margin-top: 20px;
+    height: calc(100% - 40px - 20px - 20px - 2px);
     padding: 0 300px;
     width: 100%;
     overflow: auto;
