--- a/src/view/home/index.module.scss
+++ b/src/view/home/index.module.scss
@@ -25,6 +25,8 @@
 			height: 50px;
 			line-height: 50px;
 			box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
+			text-align: left;
+			font-size: 12px;
 		}
 	}
 }
