--- a/src/components/shopList/index.module.scss
+++ b/src/components/shopList/index.module.scss
@@ -7,6 +7,10 @@
 		width: 300px;
 		height: 170px;
 		margin-bottom: 20px;
+		transition: transform .5s;
+		&:hover {
+			transform: scale(1.05);
+		}
 		:global {
 			.ant-image {
 				.ant-image-mask {
