--- a/src/components/swiper/index.module.scss
+++ b/src/components/swiper/index.module.scss
@@ -5,6 +5,10 @@
 		height: 400px;
 		border-radius: 50px;
 		cursor: pointer;
+		transition: transform .5s;
+		&:hover {
+			transform: scale(1.05);
+		}
 		:global {
 			.ant-image {
 				.ant-image-mask {
